[project]
name = "model-accelerator"
version = "0.1.0"
description = "The fastest, most efficient library for running AI models with maximum throughput at any scale."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.20.0",
    "llama-cpp-python>=0.3.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
engine = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["engine.py", "cli.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
