[project]
name = "model-accelerator"
version = "0.2.0"
description = "The fastest, most efficient library for running AI models with maximum throughput at any scale."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.20.0",
    "jinja2>=3.1.0",
    "llama-cpp-python>=0.3.19",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
ma = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["engine.py", "cli.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
